hphp/hack/test/typecheck/argument_unpacking/unpack_call_mixed.php.exp
File "unpack_call_mixed.php", line 5, characters 9-13:
Typing error (Typing[4110])
  File "unpack_call_mixed.php", line 5, characters 9-13:
  Expected `Traversable<[unresolved]>` (it is unpacked with `...`)
  File "unpack_call_mixed.php", line 3, characters 25-35:
  But got `?vec<mixed>`
